--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain-google-genai>=2.0.10",
     "langchain-google-vertexai>=2.0.27",
     "langchain-text-splitters>=0.3.8",
+    "langgraph>=0.5.1",
     "lxml>=6.0.0",
     "matplotlib>=3.10.3",
     "opencv-python>=4.11.0.86",
